# PetriNet_DigitalTwin

./: README.md
dtefm_core/: package.xml  setup.cfg  setup.py
dtefm_core/dtefm_core/: dtefm_command_decoder.py  dtefm_command_gate.py  dtefm_command_publisher.py  dtefm_command_server.py  dtefm_ether_gate.py  dtefm_identity_initializer.py  dtefm_initialier.py  test_server.py
dtefm_core/launch/: dtefm_backgrounds.launch.py  dtefm_identity.launch.py  dtefm_synchronizer.launch.py
dtefm_core/resource/: dtefm_sr_client_manual.py
dtefm_interfaces/: CMakeLists.txt  package.xml
dtefm_interfaces/action/: SRRobotIKMove.action
dtefm_interfaces/msg/: ArcMsg.msg  EAPCommand.msg  GCPNActionMsg.msg  GCPNStateMsg.msg  PetriNet.msg  PlaceMsg.msg  SRRobotInfoMsg.msg  SRStatePA.msg  SRStateRobot.msg  TransitionMsg.msg
dtefm_interfaces/src/: SorterGemModel.xml
dtefm_interfaces/srv/: EAPCommandAnalysis.srv  EAPCommandState.srv  EtherGateSrv.srv  GCPNSrv.srv  IdentityGateControlSrv.srv  IntensionExpressControlSrv.srv  IntensionGateControlSrv.srv  PNCommand.srv  SRRobotIKSrv.srv  SRRobotInfoSrv.srv  SRState.srv  SRTcpCommunication.srv  SimulateCmdCallbackSrv.srv
dtefm_middle/: package.xml  setup.cfg  setup.py
dtefm_middle/dtefm_middle/: dtefm_identity.py  dtefm_identity_gate.py  dtefm_intension_gate.py  dtefm_intension_generator.py  dtefm_intention_generate_trainer.py  dtefm_intention_generator.py  dtefm_sr_IK_server.py  dynamic_schedule.py
dtefm_middle/resource/: petri_net_service_request_commands
dtefm_physical/: package.xml  setup.cfg  setup.py
dtefm_physical/dtefm_physical/: dtefm_ether_gate_p.py  (+2 more)
dtefm_simulated/: package.xml  setup.cfg  setup.py
(+25 files in other folders)
